<resources>
    <string name="app_name">BlocNote</string>
    <string name="ceci_est_le_titre_de_la_note">ceci est le titre de la note</string>
    <string name="contenu_de_la_note">contenu de la note</string>
    <string name="titre_de_la_note">Titre de la note</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="blocnote">BlocNote</string>
    <string name="note_mode_dition">Note : mode édition</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="textview_cliqu">Selectionner la catégorie</string>
    <string name="icone_save_cliqu"> est enregistré</string>
    <string name="j_adore_le_langage_kotlin">J\'adore le langage Kotlin</string>
    <string name="a_faire">A faire</string>
    <string name="liste_de_courses">Liste de courses</string>
    <string name="rendez_vous_pro">Rendez-vous pro</string>
    <string name="rendez_vous_perso">Rendez-vous perso</string>
    <string name="lien_internet">Lien internet</string>
    <string name="contact">Contact</string>
    <string name="loisirs">Loisirs</string>
    <string name="supprimer">Supprimer</string>
    <string name="annuler">Annuler</string>
</resources>