<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".activities.DetailNote">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_dark"
        android:theme="@style/ToolbarTheme"
        app:title="@string/note_mode_dition"
        app:titleTextAppearance="@style/Toolbar.TilteText" />

    <EditText
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/titre_de_la_note"
        android:text="@string/titre_de_la_note"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titre"
        android:fontFamily="serif"
        android:hint="@string/contenu_de_la_note"
        android:text="@string/contenu_de_la_note"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/categorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contenu"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="serif"
        android:text="@string/cat_gorie"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categorie"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_faire" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liste_de_courses" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rendez_vous_pro" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rendez_vous_perso" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lien_internet" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact" />

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loisirs" />

    </RadioGroup>

</RelativeLayout>